--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ $pip install lanchat
 
 <p><code>lanchat --version</code></p>
       </section>
+<img src="/images/screen.png" alt='Screenshot' />
     </div>
 
     
