--- a/index.html
+++ b/index.html
@@ -40,23 +40,24 @@ server setup. Install on clients and just run.</p>
 <a id="things-you-should-know" class="anchor" href="#things-you-should-know" aria-hidden="true"><span class="octicon octicon-link"></span></a>Things you should know</h2>
 
 <ul>
-<li>No selecting a server( finds it on it's own)</li>
-<li>New server selected if current goes down</li>
-<li>
-<p>Picks your username from the shell</p>
+    <li>No selecting a server( finds it on it's own)</li>
+    <li>New server selected if current goes down</li>
+    <li>
+    <p>Picks your username from the shell</p>
 
-<ul>
-<li>You can change it though</li>
-<li>
+        <ul>
+        <li>You can change it though</li>
+        <li>
 <pre><code> from lanchat import chat
  n = chat.Node()
  n.name='FooBar'
  n.run()
 </code></pre>
-</ul>
-<li>Printing is wierd ( Can someone help me fix it?)</li>
-<li>No encryption (boo)</li>
-<li>No protection against DOS</li>
+        </li>
+        </ul>
+    <li>Printing is wierd ( Can someone help me fix it?)</li>
+    <li>No encryption (boo)</li>
+    <li>No protection against DOS</li>
 </ul>
 
 <h2>
@@ -87,7 +88,7 @@ $pip install lanchat
 
 <p><code>lanchat --version</code></p>
       </section>
-<img src="/images/screen.png" alt='Screenshot' />
+<img src="lanchat/images/screen.png" alt='Screenshot' />
     </div>
 
     
