Absolute url for image

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $pip install lanchat
 
 <p><code>lanchat --version</code></p>
       </section>
-<img src="lanchat/images/screen.png" alt='Screenshot' />
+<img src="http://theSage21.github.io/lanchat/images/screen.png" alt='Screenshot' />
     </div>
 
     
